--- a/index.html
+++ b/index.html
@@ -47,11 +47,8 @@
   </head>
   <body>
     <div class="links">
-      <a href="https://github.com/CodingWith-Adam/dino-game"
+      <a href="https://github.com/Shomey9/chrome-dino"
         >GitHub Repository</a
-      >&nbsp;&nbsp;<span class="separator">|</span>&nbsp;&nbsp;<a
-        href="https://youtu.be/ooru4pyEv1I"
-        >YouTube Tutorial</a
       >
     </div>
     <canvas id="game"></canvas>
